OPSI PRD v2.0: 新架构 phase 1
